# gnome-builder

./: meson.build  org.gnome.Builder.json
contrib/mi2/: meson.build  mi2-client.c  mi2-client.h  mi2-input-stream.c  mi2-reply-message.c  mi2-util.c
data/gsettings/: org.gnome.builder.project-tree.gschema.xml
data/gtk/: menus.ui
libide/: ide-context.c  ide-enums.c.in  ide-types.h  ide.h  libide.gresource.xml  meson.build
libide/debugger/: debugger.gresource.xml  ide-debug-manager.c  ide-debugger-editor-view-addin.c  ide-debugger-perspective.c  ide-debugger-perspective.h  ide-debugger-perspective.ui  ide-debugger-view.c  ide-debugger-view.h  ide-debugger-workbench-addin.c  ide-debugger.c
libide/debugger/gtk/: menus.ui
libide/runner/: ide-run-manager.c
libide/workbench/: ide-workbench.c
plugins/gdb/: gbp-gdb-debugger.c  gbp-gdb-plugin.c
plugins/meson/meson_plugin/: __init__.py
po/: POTFILES.in
src/libide/vcs/: ide-vcs.c  ide-vcs.h
src/plugins/git/: ide-git-vcs.c
src/plugins/project-tree/: gb-project-tree-actions.c  gb-project-tree-builder.c  gb-project-tree-private.h  gb-project-tree.c  gb-project-tree.h
src/plugins/project-tree/gtk/: menus.ui
